// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Space /> correctly with view component. should apply margin to child component 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 gCvvOI"
  >
    Flex Item
  </div>
</div>
`;

exports[`Renders <Space /> correctly with view component. should apply padding to child component 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 csgBMA"
  >
    Flex Item
  </div>
</div>
`;
